[workspace]
members = ["network", "ssle_core"]
resolver = "3"

[workspace.dependencies]
thiserror = "2"
tokio = { version = "1", features = ["full"] }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
bytes = { version = "1", features = ["serde"] }
bytemuck = "1.23"
rayon = "1.10.0"
criterion = "0.7"

primus_integer = { path = "../primus/primus_integer" }
primus_fhe_core = { path = "../primus/primus_fhe_core" }
primus_modulus = { path = "../primus/primus_modulus" }
primus_decompose = { path = "../primus/primus_decompose" }
primus_ntt = { path = "../primus/primus_ntt" }
primus_rns = { path = "../primus/primus_rns" }
primus_lattice = { path = "../primus/primus_lattice" }


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.bench]
lto = true
codegen-units = 1

[profile.release]
lto = "thin"
panic = "abort"
codegen-units = 1
