[workspace]
members = ["network", "network2", "ssle_core"]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.10"
serde = { version = "1.0", features = ["derive"] }
bytes = { version = "1", features = ["serde"] }
bytemuck = "1.25"
rayon = "1.11"
itertools = "0.14"
indicatif = { version = "0.18", features = ["rayon"] }
mimalloc = "0.1"
tracing = "0.1"

primus_integer = { git = "https://github.com/haofeiliang/primus.git", branch = "archive/main" }
primus_reduce = { git = "https://github.com/haofeiliang/primus.git", branch = "archive/main" }
primus_modulus = { git = "https://github.com/haofeiliang/primus.git", branch = "archive/main" }
primus_factor = { git = "https://github.com/haofeiliang/primus.git", branch = "archive/main" }
primus_poly = { git = "https://github.com/haofeiliang/primus.git", branch = "archive/main" }
primus_distr = { git = "https://github.com/haofeiliang/primus.git", branch = "archive/main" }
primus_decompose = { git = "https://github.com/haofeiliang/primus.git", branch = "archive/main" }
primus_ntt = { git = "https://github.com/haofeiliang/primus.git", branch = "archive/main" }
primus_rns = { git = "https://github.com/haofeiliang/primus.git", branch = "archive/main" }
primus_lattice = { git = "https://github.com/haofeiliang/primus.git", branch = "archive/main" }
primus_fhe_core = { git = "https://github.com/haofeiliang/primus.git", branch = "archive/main" }


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.bench]
lto = true
codegen-units = 1

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
