[package]
name = "ssle_core"
version = "0.1.0"
edition = "2024"

[dependencies]
network = { path = "../network" }

primus_barrett_modulus = { workspace = true }
primus_decompose = { workspace = true }
primus_fhe_core = { workspace = true }

rand = { workspace = true }

[dev-dependencies]
mimalloc = "0.1.47"
clap = { version = "4", features = ["derive"] }
num_cpus = "1.0"
