[package]
name = "ssle_core"
version = "0.1.0"
edition = "2024"

[dependencies]
network = { path = "../network" }

primus_integer = { workspace = true }
primus_reduce = { workspace = true }
primus_modulus = { workspace = true }
primus_factor = { workspace = true }
primus_distr = { workspace = true }
primus_poly = { workspace = true }
primus_decompose = { workspace = true }
primus_ntt = { workspace = true }
primus_rns = { workspace = true }
primus_lattice = { workspace = true }
primus_fhe_core = { workspace = true }

tokio = { workspace = true }
rand = { workspace = true }
bytemuck = { workspace = true }
bytes = { workspace = true }
num = { version = "0.4.3", features = ["rand"] }

[dev-dependencies]
mimalloc = { workspace = true }
clap = { version = "4", features = ["derive"] }
num_cpus = "1"
crossbeam-channel = "0.5.15"
rayon = { workspace = true }
itertools = { workspace = true }
tabled = "0.20"
quanta = "0.12"
indicatif = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = [
    "parking_lot",
    "time",
    "local-time",
] }


[features]
gt32 = []
gt128 = []
